<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity2"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/medium_padding">

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirma tu información"
        android:textSize="32sp"
        android:layout_marginBottom="@dimen/medium_padding"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:fontFamily="sans-serif-medium"
        />

    <TextView
        android:id="@+id/namefield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_field"
        android:textSize="24sp"
        android:layout_marginBottom="@dimen/medium_padding"
        android:textColor="@color/gray"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:fontFamily="sans-serif-medium"
        />

    <TextView
        android:id="@+id/emailfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_field"
        android:textSize="24sp"
        android:layout_marginBottom="@dimen/medium_padding"
        android:textColor="@color/gray"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:fontFamily="sans-serif-medium"
        />

    <TextView
        android:id="@+id/numberfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_field"
        android:textSize="24sp"
        android:layout_marginBottom="@dimen/medium_padding"
        android:textColor="@color/gray"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:fontFamily="sans-serif-medium"
        />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textSize="20sp"
        android:text="Compartir"
        android:textColor="@color/black"
        android:backgroundTint="@color/button_color"/>



</androidx.appcompat.widget.LinearLayoutCompat>